core/src/main/java/com/example/core/error/OAuth2AuthenticationProcessingException.java
package com.example.core.error;

public class OAuth2AuthenticationProcessingException extends Exception {

    public OAuth2AuthenticationProcessingException(String msg) {
        super(msg);
    }
}
